Add mlit indexing script
- Add submodule: chopstickexe/mlit
- Add .flake8
- Add dependencies: es, flake8, black

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,5 @@ jupyter
 --find-links https://download.pytorch.org/whl/torch_stable.html
 torch==1.6.0+cu101
 elasticsearch
+black  # formatter
+flake8  # linter
