--- a/similar-text-search-ja/config.ini
+++ b/similar-text-search-ja/config.ini
@@ -2,3 +2,7 @@
 EsUrl = es01:9200
 EsIndex = mlit
 CsvPath = data/mlit/mlit.20200919.csv
+TestIdMin = 56777
+TestIdMax = 57777
+TargetFields = 申告内容の要約
+AnsField = 不具合装置
