--- a/similar-text-search-ja/config.ini
+++ b/similar-text-search-ja/config.ini
@@ -1,7 +1,7 @@
 [DEFAULT]
 EsUrl = es01:9200
 EsIndex = mlit
-CsvPath = data/mlit/mlit.20200919.csv
+CsvPath = data/mlit/mlit.20200919.cleaned.csv
 TestIdMin = 56777
 TestIdMax = 57777
 TargetFields = 申告内容の要約
