Use config.json

--- a/config.json
+++ b/config.json
@@ -4,12 +4,14 @@
     "bert_vec_size": 768,
     "mlit":{
         "es_index": "mlit",
+        "es_always_clear_index": "True",
+        "es_bulk_size": 10000,
         "csv_path": "data/mlit/mlit.20200919.cleaned.csv",
         "test_id_min": 56777,
         "test_id_max": 57777,
         "target_fields": ["申告内容の要約"],
         "ans_field": "不具合装置",
-        "invalid_and": "その他",
+        "invalid_ans": "その他",
         "date_field": "受付日",
         "date_format": "yyyy年MM月dd日"
     }
