Make triplets from MLIT data (#8)
* Add dependency: sentence_transformers

* Add mlit.config

* Add dependency: pandas

* Add data conversion module for SBERT

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,8 @@ jupyter
 --find-links https://download.pytorch.org/whl/torch_stable.html
 torch==1.6.0+cu101
 elasticsearch
+sentence-transformers
+pandas
 black  # formatter
 flake8  # linter
 pytest
