--- a/config.json
+++ b/config.json
@@ -6,7 +6,8 @@
         "es_index": "mlit",
         "es_always_clear_index": "True",
         "es_bulk_size": 2000,
-        "csv_path": "data/mlit/mlit.20200919.cleaned.csv",
+        "csv_path": "data/mlit/raw/mlit.sample.csv",
+        "triplet_dataset_dir": "data/mlit/triplets/sample",
         "test_id_min": 56777,
         "test_id_max": 57777,
         "target_fields": ["申告内容の要約"],
