Train & Test with larger MLIT data
```
epoch,steps,accuracy_cosinus,accuracy_manhatten,accuracy_euclidean
-1,-1,0.8614284065997462,0.8608515057113187,0.8609091958001616
```

--- a/config.json
+++ b/config.json
@@ -6,8 +6,8 @@
         "es_index": "mlit",
         "es_always_clear_index": "True",
         "es_bulk_size": 2000,
-        "csv_path": "data/mlit/raw/mlit.sample.csv",
-        "triplet_dataset_dir": "data/mlit/triplets/sample",
+        "csv_path": "data/mlit/raw/mlit.20200919.cleaned.csv",
+        "triplet_dataset_dir": "data/mlit/triplets/20200919",
         "test_id_min": 56777,
         "test_id_max": 57777,
         "target_fields": ["申告内容の要約"],
