--- a/config.json
+++ b/config.json
@@ -7,6 +7,7 @@
         "es_bulk_size": 2000,
         "csv_path": "data/mlit/raw/mlit.20200919.cleaned.csv",
         "triplet_dataset_dir": "data/mlit/triplets/20200919",
+        "report_dir": "reports/mlit",
         "test_id_min": 56777,
         "test_id_max": 57777,
         "target_fields": ["申告内容の要約"],
