--- a/config.json
+++ b/config.json
@@ -1,10 +1,7 @@
 {
     "es_url": "es01:9200",
     "es_embedding_field": "embeddings",
-    "vect_config": {
-        "tokenizer_name_or_path": "cl-tohoku/bert-base-japanese-whole-word-masking",
-        "model_name_or_path": "cl-tohoku/bert-base-japanese-whole-word-masking"
-    },
+    "transformer_model": "cl-tohoku/bert-base-japanese-whole-word-masking",
     "datasets": {
         "mlit-sample": {
             "es_always_clear_index": "True",
